@@ -6,6 +6,11 @@
   + Parslet::Transform now only passes a hash to the block during transform
     when its arity is 1. Otherwise all hash contents as bound as local     
     variables.
+    
+  + Both inline and other documentation have been improved. 
+  
+  + You can now use 'subtree(:x)' to bind any subtree to x during tree pattern
+    matching. 
 
 = 0.9.0 / 28Oct2010
   * More of everything: Examples, documentation, etc...
